Fix project sidebar resizable when too large

--- a/src/style.css
+++ b/src/style.css
@@ -52,7 +52,7 @@ body {
 .sidebar {
     border-right: 1px solid rgba(71, 71, 71, 0.507);
     width: 230px;
-    height: 100vh;
+    height: clamp(100vh, 100%, 100%);
     background-color: hsl(225, 13%, 81%);
     grid-column: 1 / 2;
     font-family: "Roboto";
